--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header .container{
 header .logo{
     margin-left: 40px;
     color: var(--vermelho);
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'Space Mono', monospace;
     font-size: 40px;
 }
 
@@ -34,7 +34,8 @@ header nav a{
     text-decoration: none;
     color: #AAAAAA;
     margin-right: 40px;
-    font-size: 20px;
+    font-size: 16px;
+    font-family: 'Arvo', serif;
 }
 
 header nav a:hover{
