--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,13 @@ header nav a:hover{
     margin-top: 5px;
 }
 
+.box-filme:hover{
+    border: 5px solid #e50914;
+    transform: scale(1.2);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.6);
+
+}
+
 .serie-principal{
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('../images/capa-serie.jpg');
@@ -123,6 +130,13 @@ header nav a:hover{
 }
 .carrossel-series{
     margin-top: 5px;
+}
+
+.box-series:hover{
+    border: 5px solid #2ee509;
+    transform: scale(1.2);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.6);
+
 }
 
 
